--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -20,7 +20,7 @@
 		/>
 		<title>Tareas Pendientes</title>
 	</head>
-	<body>
+	<body class="bg-white dark:bg-slate-800 text-slate-500 dark:text-slate-400">
 		<main class="p-8 space-y-8">
 			<slot />
 		</main>
